# GraphTide

./: .gitignore  .gitmodules  README.md  pyproject.toml
IO/: IO.hpp  IO_test.cpp  Makefile  README.md  compile_flags.txt
IO/converters/: .gitignore  convert.py  convert_old_binary_signal.cpp  convert_old_binary_with_deletes.cpp  convert_plain_signal.cpp
IO/python_helpers/: convert_basic.py  generate_test_graphs.py  run.sh
analyze/: .gitignore  CMakeLists.txt  README.md  abseil-cpp  check_graph_type.cpp  check_symmetric.cpp  count_timestamps.cpp  dynamic_CC_example.cpp  edge_alive_statistics.cpp  edge_statistics.cpp  graph.hpp  graph_generators.hpp  graph_statistics.cpp  graph_statistics_with_edges_files.cpp  helpers.hpp  io_util.hpp  node_statistics.cpp  orientation.hpp  orientation_statistics.cpp  parallel.h  plot.py  plot_edge_alive.py  plot_nodes.py  plot_timestamp.py  rmat_util.h  run.sh  update_fraction.cpp
analyze/append_algorithms/: bfs.hpp  cc.hpp  tc.hpp
analyze/dynamic_algorithms/: cc.hpp  tc.hpp
analyze/python_helpers/: plot.py
analyze/static_algorithms/: bfs.hpp  cc.hpp  kcore.hpp
examples/: antarctica.csv  convert_and_analyze.py
parse/: README.md
parse/aminer/: readme.md  run.sh  task.py
parse/bluesky/: README.md  parse.py
parse/btc_stream/: README.md  dump_to_el.py
parse/dblp/: readme.md  run.sh  task.py
parse/ethereum/: README.md  combine_time.sh  combine_txn.sh  parse.cpp
parse/flight_opensky/: CMakeLists.txt  README.md  extract.py  parse.cpp
parse/git/: README.md  parse_git_repo.py
parse/nyc_taxi/: README.md  parquet_to_csv.py
parse/nyc_taxi/green/: download_green.py
parse/oag/: code.py  infos.txt  readme.md  run.sh
parse/openstreetmap/: .gitignore
parse/openstreetmap/dynamic/: .gitignore  Makefile  csv_to_bin.cpp  generate.sh  generate_unweighted.sh  generate_weighted.sh  openstreetmap_dynamic.cpp
parse/openstreetmap/static/: Makefile  README.md  extract_static.sh  osm4routing2pbbs.cpp
parse/reddit/: README.md  data_get.py  parse_data.py
parse/semantic_scholar/: Makefile  README.md  download.py  parse.cpp
parse/wikipedia/: README.md  combine_links.py  download_and_parse.sh  files.txt  run_combine_links.sh  unzip_and_parse.sh  xml_parse.py
pybinding/: README.md  __init__.py  analyze.py  convert.py  io.py
