[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "graphtide"
version = "0.1.0"
description = "GraphTide - Python bindings for dynamic graph dataset collection and analysis"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["pybinding*"]
